fix bug and support files folder outside

--- a/get_config.json
+++ b/get_config.json
@@ -1,9 +1,8 @@
 {
     "source_files":[
-        "/root/async.sh",
-        "/root/light_gw_server.sh"
+        "/bin/ipcalc.sh"
     ],
     "source_folders":[
-        "/root/otaConfigFile"
+        "/root"
     ]
 }
