--- a/put_config.json
+++ b/put_config.json
@@ -1,8 +1,8 @@
 {
     "source_files":[
-        "cylscp.py"
+        "ipcalc.sh"
     ],
     "source_folders":[
-        "upload"
+        "root"
     ]
 }
